Fix transmissions being considered posts

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,9 @@ discord_link: https://discord.gg/4qE2GuGz2J
 plugins:
   - jekyll-feed
 
+collections:
+  - transmissions
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
